[gd_scene load_steps=21 format=2]

[ext_resource path="res://Chilanka-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://movebuttons.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://football.gd" type="Script" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://icon.png" type="Texture" id=6]
[ext_resource path="res://UserInterface.gd" type="Script" id=7]
[ext_resource path="res://Opponent.gd" type="Script" id=8]
[ext_resource path="res://soccerball.png" type="Texture" id=9]
[ext_resource path="res://Op_GoalKeeper.tscn" type="PackedScene" id=10]
[ext_resource path="res://Goalkeeper.tscn" type="PackedScene" id=11]

[sub_resource type="PhysicsMaterial" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17, 400 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 613, 16 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16, 80 )

[sub_resource type="CircleShape2D" id=6]
radius = 32.0

[sub_resource type="CircleShape2D" id=9]
radius = 20.0

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 112 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 1 )

[node name="World" type="Node"]
script = ExtResource( 5 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 1024.0
margin_bottom = 576.0
color = Color( 0.607843, 0.823529, 0.447059, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]
scale = Vector2( 0.935686, 0.892903 )
physics_material_override = SubResource( 2 )

[node name="wall_left" type="CollisionShape2D" parent="Walls"]
position = Vector2( -17, 320 )
shape = SubResource( 3 )

[node name="wall_right" type="CollisionShape2D" parent="Walls"]
position = Vector2( 1112, 320 )
shape = SubResource( 3 )

[node name="wall_top" type="CollisionShape2D" parent="Walls"]
position = Vector2( 556, -16 )
shape = SubResource( 4 )

[node name="wall_bottom" type="CollisionShape2D" parent="Walls"]
position = Vector2( 556, 655 )
shape = SubResource( 4 )

[node name="goalmechanics" type="Node2D" parent="."]

[node name="LPointArea" type="Area2D" parent="goalmechanics"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goalmechanics/LPointArea"]
position = Vector2( 16, 288 )
shape = SubResource( 11 )

[node name="RPointArea" type="Area2D" parent="goalmechanics"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goalmechanics/RPointArea"]
position = Vector2( 1008, 288 )
shape = SubResource( 11 )

[node name="football" type="RigidBody2D" parent="."]
position = Vector2( 509, 293 )
input_pickable = true
gravity_scale = 0.0
custom_integrator = true
contacts_reported = 1
contact_monitor = true
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="football"]
scale = Vector2( 0.0231429, 0.0231429 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="football"]
scale = Vector2( 0.658597, 0.658597 )
shape = SubResource( 6 )

[node name="Detect" type="Area2D" parent="football"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="football/Detect"]
shape = SubResource( 9 )

[node name="Opponent" type="KinematicBody2D" parent="."]
position = Vector2( 609, 288 )
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Opponent"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Opponent"]
scale = Vector2( 3.09615, 3.09615 )
shape = SubResource( 7 )

[node name="Character " type="Node2D" parent="."]

[node name="Player" parent="Character " instance=ExtResource( 3 )]
position = Vector2( 416, 288 )

[node name="movebuttons" parent="Character " instance=ExtResource( 2 )]
position = Vector2( 106, 487 )
scale = Vector2( 0.604077, 0.604077 )

[node name="barriers" type="StaticBody2D" parent="."]

[node name="Lgoaltop" type="CollisionShape2D" parent="barriers"]
position = Vector2( 32, 96 )
shape = SubResource( 12 )

[node name="Lgoalbottom" type="CollisionShape2D" parent="barriers"]
position = Vector2( 32, 480 )
shape = SubResource( 12 )

[node name="Rgoaltop" type="CollisionShape2D" parent="barriers"]
position = Vector2( 992, 96 )
shape = SubResource( 12 )

[node name="Rgoalbottom" type="CollisionShape2D" parent="barriers"]
position = Vector2( 992, 480 )
shape = SubResource( 12 )

[node name="goaloutline" type="Node2D" parent="."]

[node name="leftgoal" type="ColorRect" parent="goaloutline"]
margin_top = 192.0
margin_right = 64.0
margin_bottom = 208.0
color = Color( 0.345098, 0.847059, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftgoal2" type="ColorRect" parent="goaloutline"]
margin_top = 368.0
margin_right = 64.0
margin_bottom = 384.0
color = Color( 0.345098, 0.847059, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightgoal" type="ColorRect" parent="goaloutline"]
margin_left = 960.0
margin_top = 192.0
margin_right = 1024.0
margin_bottom = 208.0
color = Color( 0.945098, 0.337255, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rightgoal2" type="ColorRect" parent="goaloutline"]
margin_left = 960.0
margin_top = 368.0
margin_right = 1024.0
margin_bottom = 384.0
color = Color( 0.945098, 0.337255, 0.337255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserInterface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="UserInterface"]
margin_left = 464.0
margin_top = 40.0
margin_right = 515.0
margin_bottom = 58.0
rect_scale = Vector2( 2.36, 1.8 )
custom_fonts/font = SubResource( 13 )
text = "Score: %s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Goalkeeper" parent="." instance=ExtResource( 11 )]
position = Vector2( 64, 288 )

[node name="Op_GoalKeeper" parent="." instance=ExtResource( 10 )]
position = Vector2( 960, 288 )
[connection signal="area_entered" from="football/Detect" to="football" method="_on_Detect_area_entered"]
